# TER_Graphes_Planaires

./: CMakeLists.txt  build_wasm.sh  graph.c  graph.h  graph_wasm_api.c  main.c  main_cli.c  permutations.c  permutations.h  planar_editor.html  planar_graph_creator.c  planar_graph_creator.h  readme.md  script_emcc.txt  study.c  style_visualizer.css  test.c  visualizer.html  visualizer.js
Rapport LateX/: main.tex  refs.bib
visualizer/: graph_visualizer_wasm.js  graph_visualizer_wasm.wasm  graph_wasm_bridge.js  visualizer.css  visualizer.html  visualizer.js
visualizer2/: graph_wasm_bridge.js  server.py  start  start.bat  visualizer2.css  visualizer2.html  visualizer2.js
